--- a/Exploro/src/index.html
+++ b/Exploro/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script type = "text/javascript" src="component/map/map.component.ts"></script>
   <meta charset="utf-8" />
   <title>Ionic App</title>
 
